[package]
name = "mailboxxy"
version = "0.0.3"
edition = "2021"
description = "simple micro actor library for rust"
repository = "https://github.com/0x53A/mailboxxy-rs"
license = "0BSD"
keywords = ["actor", "mailbox"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"

[dev-dependencies]
# async executor for tests
smol = "2.0.0"

[features]
default = ["thread"]
thread = []

