[package]
name = "mailboxxy"
version = "0.0.4"
edition = "2021"
description = "simple micro actor library for rust"
repository = "https://github.com/0x53A/mailboxxy-rs"
license = "0BSD"
keywords = ["actor", "mailbox"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
smol = "2.0"

[features]
default = ["thread"]
thread = []

